# resizeable-widget

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  codecov.yml  install.json  package.json  pyproject.toml  pytest.ini  resizeable_widget.json  webpack.config.js
.github/workflows/: build.yml
css/: widget.css
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
resizeable_widget/: __init__.py  _frontend.py  _version.py  widget.py
resizeable_widget/nbextension/: extension.js
resizeable_widget/tests/: conftest.py  test_example.py  test_nbextension_path.py
src/: extension.ts  index.ts  plugin.ts  version.ts  widget.ts
